# Fidenz-Athlete-OS

./: README.md
athlete_os_env/: .gitignore  Dockerfile  README.md  TECHNICAL_DEEP_DIVE.html  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
athlete_os_env/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
athlete_os_env/frontend/src/: App.vue  style.css
athlete_os_env/frontend/src/api/: environment.js  index.js  simulation.js
athlete_os_env/frontend/src/components/: AgentThoughtLog.vue  ChemistryMatrix.vue  PitchView.vue  PlayerCard.vue  RewardChart.vue  RoundFeed.vue  Step1DataIngest.vue  Step2PersonaForge.vue  Step3GraphView.vue  Step4SimRunner.vue  Step5Report.vue  SwarmStatusBar.vue
athlete_os_env/frontend/src/composables/: useSimSocket.js
athlete_os_env/frontend/src/router/: index.js
athlete_os_env/frontend/src/store/: episode.js  simulation.js  squad.js
athlete_os_env/server/: app.py  athlete_environment.py
athlete_os_env/server/agents/: grader_agent.py  graph_builder_agent.py  ontology_agent.py  orchestrator.py  persona_agent.py  report_agent.py  sim_runner_agent.py
athlete_os_env/server/graphrag/: graph_builder.py  ontology.py  retriever.py
athlete_os_env/server/rl/: experience_replay.py  kl_constraint.py  ppo_policy.py  reward.py
athlete_os_env/server/simulation/: event_engine.py  persona_config.py  simulation_manager.py  simulation_runner.py
athlete_os_env/server/utils/: llm_client.py  logger.py  retry.py  score_bounds.py  sports_data.py
(+6 files in other folders)
